# content-types

./: .gitignore  CLAUDE.md  README.md  change-log.md  great-docs.yml  pyproject.toml  pytest.ini
.claude/: settings.json  settings.local.json
content_types/: __init__.py
docs/: build-timings.json  changelog.html  changelog.md  index.html  license.html  llms-full.txt  llms.txt  robots.txt  search.json  sitemap.xml  skills.html
docs/.well-known/agent-skills/: index.json
docs/.well-known/agent-skills/content-types/: SKILL.md
docs/.well-known/skills/default/: SKILL.md
docs/reference/: EXTENSION_TO_CONTENT_TYPE.html  EXTENSION_TO_CONTENT_TYPE.md  csv.html  csv.md  get_content_type.html  get_content_type.md  guess_all_extensions.html  guess_all_extensions.md  guess_extension.html  guess_extension.md  index.html  index.md  ipynb.html  ipynb.md  jpg.html  jpg.md  json.html  json.md  md.html  md.md  mp3.html  mp3.md  parquet.html  parquet.md  pdf.html  pdf.md  pkl.html  pkl.md  png.html  png.md  sqlite.html  sqlite.md  toml.html  toml.md  webp.html  webp.md  xml.html  xml.md  yaml.html  yaml.md  (+2 more)
plans/: 01-issue-9-guess-extension.md
samples/: compare_to_builtin.py
scripts/: build_docs.py  serve_docs.py
tests/: __init__.py  test_content_types.py
