[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

# The wheel already ships only content_types/ by default; the sdist would
# otherwise include everything git-tracked (docs/, tests/, scripts/, ...).
[tool.hatch.build.targets.sdist]
only-include = ["content_types", "change-log.md"]

[project]
name = "content-types"
version = "0.3.2"
description = "A library to map file extensions to content types and vice versa."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Michael Kennedy", email = "mikeckennedy@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["mime", "content-type", "mapping", "file extensions"]

# If you have no runtime dependencies, this can be an empty array or omitted
dependencies = []

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
# Docs toolchain. great-docs requires Python >= 3.11; the marker keeps `[dev]`
# installable on 3.10 (the package's minimum) by simply skipping it there.
dev = [
    "great-docs; python_version >= '3.11'",
]

# These surface on the PyPI project page; the labels below map to PyPI's
# recognized link icons (Homepage / Documentation / Repository / Issues / Changelog).
[project.urls]
"Homepage" = "https://github.com/mikeckennedy/content-types"
"Documentation" = "https://mkennedy.codes/docs/content-types/"
"Repository" = "https://github.com/mikeckennedy/content-types"
"Issues" = "https://github.com/mikeckennedy/content-types/issues"
"Changelog" = "https://github.com/mikeckennedy/content-types/blob/main/change-log.md"

[project.scripts]
content-types = "content_types:cli"
